<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="cz.cvut.fit.travelmates.trips.tripdetails.TripDetailsViewModel" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintTripDetailsContent"
                visible="@{vm.contentVisible}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.detailedTrip.title}"
                    android:textSize="28sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsLocation"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.location}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsTitle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.detailedTrip.suggestedDate}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsLocation" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTripDetailsMembers"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsDate" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsEquipmentTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_details_title_equipment"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerTripDetailsMembers" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/recyclerTripDetailsEquipment"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsEquipmentTitle" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsDescriptionTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/trip_details_title_description"
                    android:textSize="20sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/recyclerTripDetailsEquipment" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/textTripDetailsDescription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@{vm.detailedTrip.description}"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsDescriptionTitle" />

                <com.google.android.material.button.MaterialButton
                    visible="@{vm.isGuest}"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:onClick="@{()->vm.onJoinPressed()}"
                    android:text="@string/trip_details_button_join"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@id/textTripDetailsDescription"
                    app:layout_constraintWidth_percent="0.7" />
            </androidx.constraintlayout.widget.ConstraintLayout>

            <ProgressBar
                visible="@{vm.loadingVisible}"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>
</layout>